# java-serializable

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pom.xml
.github/workflows/: compiler.yml  tester.yml
src/main/c/: CMakeLists.txt  allocator.c  codes_laivy_serializable_Allocator.h  fields.c  fields.h
src/main/java/codes/laivy/serializable/: AbstractTypeSerializer.java  Allocator.java  Serializer.java  TypeSerializer.java
src/main/java/codes/laivy/serializable/adapter/: Adapter.java
src/main/java/codes/laivy/serializable/annotations/: BypassTransient.java  Concrete.java  Concretes.java  ExcludeFields.java  Generic.java  IgnoreTransient.java  KnownAs.java  OnlyFields.java  UseEmptyConstructor.java  UsingSerializers.java
src/main/java/codes/laivy/serializable/config/: Builder.java  Config.java  ConfigImpl.java  FatherImpl.java
src/main/java/codes/laivy/serializable/context/: Context.java  (+10 more)
src/main/resources/libs/: macos.dylib  macos_arm64.dylib  macos_x86_64.dylib
src/resources/libs/: macos.dylib
src/test/java/: AllocatorTest.java  CollectionTest.java  ContextTest.java  EnumTest.java  NonStaticClassTest.java  ObjectTest.java
src/test/java/annotations/: BypassTransientTest.java  ConcreteTest.java  EnheritMethodSerializationTest.java  EnheritSerializersTest.java  ExcludeFieldsTest.java  KnownAsTest.java  MethodSerializationTest.java  OnlyFieldsTest.java  SerializersTest.java  UseEmptyConstructorTest.java  UsingSerializersTest.java
src/test/java/java_serialization/: ReadResolveTest.java  WriteReplaceTest.java
src/test/java/utilities/: ArrayUtils.java
(+72 files in other folders)
